--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -53,6 +53,9 @@ jobs:
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@v2
 
+    - run: echo "GITHUB_REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
+      shell: bash
+
     - name: Inspect builder
       run: |
         echo "Name:      ${{ steps.buildx.outputs.name }}"
